<resources>
    <string name="app_name" translatable="false">Gacha Tracker</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="games">Games</string>
    <string name="counter">Counter</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="last_5_star">Last 5 Star</string>
    <string name="placeholder_counter_history_num" translatable="false">75</string>
    <string name="placeholder_unit_name" translatable="false">Mavuika</string>
    <string name="current_progress">Current Progress</string>
    <string name="placeholder_counter_num" translatable="false">70</string>
    <string name="status_50_50">Status of the 50/50 Guaranteed</string>
    <string name="guaranteed">Guaranteed:</string>
    <string name="plus_one" translatable="false">+1</string>
    <string name="plus_x" translatable="false">+X</string>
    <string name="plus_ten" translatable="false">+10</string>
    <string name="till_soft_pity">Pulls Till Soft Pity</string>
    <string name="reached_soft_pity">Reached Soft Pity!</string>
    <string name="past_soft_pity">Pulls Past Soft Pity</string>
    <string name="currency_till_soft_pity">Till Soft Pity</string>
    <string name="currency_past_soft_pity">Past Soft Pity</string>
    <string name="total_currency_spent">Spent</string>
    <string name="confirm_5_star">Confirm 5 Star</string>
    <string name="primogens" translatable="false">Primogens</string>
    <string name="stellar_jades" translatable="false">Stellar Jades</string>
    <string name="featured_unit">Featured Unit</string>
    <string name="update_counter">Update Counter</string>
    <string name="not_guaranteed">Not Guaranteed</string>
    <string name="num_pulls">Num of Pulls</string>
    <string name="unit_name">Character Name</string>
    <string name="from_banner">From Banner</string>
    <string name="date">Date</string>
    <string name="personal">Personal</string>
    <string name="global">Global</string>
    <string name="personal_stats">Personal Stats</string>
    <string name="global_stats">Global Stats</string>
    <string name="percentage_fifty_fifty">Percentage of won 50/50</string>
    <string name="total_won_fifty_fifty">Total number of won 50/50</string>
    <string name="total_lost_fifty_fifty">Total number of lost 50/50</string>
    <string name="avg_for_five_star">Average number of pulls for 5 star unit</string>
    <string name="total_five_stars">Total number of five stars pulled</string>
    <string name="total_num_pulls">Total number of pulls</string>
    <string name="avg_currency_five_star">Avg. No. of in-game currency for 5-star</string>
    <string name="total_currency_five_star">Total number of in-game currency spent</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="num_wishes_grater_0_error">Number of wishes must be grater than 0</string>
    <string name="enter_received_unit_error">Please enter the name of the received unit</string>
    <string name="select_radio_choice_error">Please select a radio choice</string>
    <string name="enter_a_number_error">Please enter a number</string>
    <string name="enter_counter_number_hint">Enter the counter number:</string>
    <string name="input_custom_number">Input custom number</string>
    <string name="input_character_name">Input character name</string>
    <string name="enter_character_name">Enter character name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="num_wishes_at_least_0">Number of wishes must be at least 0</string>

    <string name="general_settings">General Settings</string>
    <string name="game_settings">Game Settings</string>
    <string name="game">Game</string>
    <string name="banner" translatable="false">Banner</string>

    <string name="banner_type">Banner type</string>
    <string name="language">Language</string>
    <string name="weapon" translatable="false">Weapon</string>
    <string name="light_cone" translatable="false">Light Cone</string>
    <string name="w_engine" translatable="false">W-Engine</string>
    <string name="gacha_app_framework" translatable="false">Gacha App Framework</string>
    <string name="sign_in_description">Your Very Own Gacha Wish Tracker</string>
    <string name="sign_in">Sign In</string>
    <string name="logout_confirmation">Are You Sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="polychrome" translatable="false">Polychrome</string>
    <string name="enigma_entity" translatable="false">Enigma entity</string>

    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="re_enter_password">Reenter password</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="new_user">New user</string>
    <string name="back">Back</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="create_account">Create Account</string>
    <string name="create_user_error">An error occurred while trying to create a new account </string>
    <string name="fill_all_forms">Please fill all forms</string>
    <string name="mismatch_password">Passwords do not match</string>
    <string name="short_password">Password needs to be at least 6 characters long</string>
    <string name="email_used">Email is already in use</string>
    <string name="user_not_exist">User does not exist</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="registration_failed">Registration failed</string>

    <string name="chronicled_wish" translatable="false">Chronicled Wish</string>
    <string name="collaboration" translatable="false">Collaboration</string>
    <string name="collaboration_character" translatable="false">Collaboration: Character</string>
    <string name="collaboration_light_cone" translatable="false">Collaboration: Light Cone</string>

</resources>