<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <!-- najprej dodaj dark mode implementation nato eazmisli o uporabi ikon -->

    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_counter"
            android:title="@string/counter"
            />

        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics"
            />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            />
        <!-- Razmisli o uporabi switch material ali switch compat za dark mode toggle -->
        <!-- glej switch compat in navigation drawer tutoriale ali kaj podobnega -->

    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                />
        </menu>
    </item>
</menu>