<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/rounded_corners"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/txtConfirmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_character_name"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputConfirmCounter"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_character_name"
        app:layout_constraintTop_toBottomOf="@id/txtConfirmTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rGrConfirm"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputConfirmCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/wonRadioButton"
            android:layout_marginEnd="50dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/lostRadioButton"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost"
            />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/rGrConfirm"
        app:layout_constraintLeft_toRightOf="@id/guidelineVerticalConfirm"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/rGrConfirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guidelineVerticalConfirm"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>