<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/rounded_corners"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/txtXTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_custom_number"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputXCounter"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_counter_number_hint"
        app:layout_constraintTop_toBottomOf="@id/txtXTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnXConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/inputXCounter"
        app:layout_constraintLeft_toRightOf="@id/guidelineVerticalX"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnXCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/inputXCounter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guidelineVerticalX"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>