<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.StatsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStatsHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStatsVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStatsPersonal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/personal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineStatsHorizontal1"
        app:layout_constraintRight_toLeftOf="@id/guidelineStatsVertical1"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStatsGlobal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/global"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineStatsHorizontal1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guidelineStatsVertical1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStatsHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18"
        />

    <TextView
        android:id="@+id/txtStatsTitle"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/personal_stats"
        app:layout_constraintTop_toBottomOf="@id/guidelineStatsHorizontal1"
        app:layout_constraintBottom_toTopOf="@id/guidelineStatsHorizontal2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>