<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HistoryFragment">

    <!--
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guidelineHistoryHorizontal"
        app:layout_constraintTop_toTopOf="@id/guidelineHistoryHorizontal"
        />

    -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_history_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_history_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_history_vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_history_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/txt_history_pulls_description"
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/num_pulls"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_history_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline_history_vertical1"
        />

    <TextView
        android:id="@+id/txt_history_unit_description"
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/unit_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_history_horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_history_vertical1"
        app:layout_constraintRight_toLeftOf="@id/guideline_history_vertical2"
        />

    <TextView
        android:id="@+id/txt_history_banner_description"
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/from_banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_history_horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_history_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_history_vertical3"
        />

    <TextView
        android:id="@+id/txt_history_date_description"
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_history_horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_history_vertical3"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_history"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_history_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>