<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    style="@style/AppBackground"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        />

    <TextView
        android:id="@+id/txt_sign_in_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal1"
        app:layout_constraintLeft_toRightOf="@id/guideline_sign_in_vertical1"
        app:layout_constraintBottom_toTopOf="@id/guideline_sign_in_horizontal2"
        app:layout_constraintRight_toLeftOf="@id/guideline_sign_in_vertical2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        />

    <TextView
        android:id="@+id/txt_sign_in_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/sign_in_description"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal3"
        app:layout_constraintLeft_toRightOf="@id/guideline_sign_in_vertical1"
        app:layout_constraintBottom_toTopOf="@id/guideline_sign_in_horizontal4"
        app:layout_constraintRight_toLeftOf="@id/guideline_sign_in_vertical2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/sign_in_username"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal7"
        app:layout_constraintLeft_toRightOf="@id/guideline_sign_in_vertical1"
        app:layout_constraintBottom_toTopOf="@id/guideline_sign_in_horizontal8"
        app:layout_constraintRight_toLeftOf="@id/guideline_sign_in_vertical2"
        />

    <TextView
        android:id="@+id/txt_sign_in_or"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/or"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in_password"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in_google"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in_google"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/sign_in_google"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal5"
        app:layout_constraintLeft_toRightOf="@id/guideline_sign_in_vertical1"
        app:layout_constraintBottom_toTopOf="@id/guideline_sign_in_horizontal6"
        app:layout_constraintRight_toLeftOf="@id/guideline_sign_in_vertical2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />

    <FrameLayout
        android:layout_marginTop="50dp"
        android:id="@+id/language_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal6"
        app:layout_constraintLeft_toRightOf="@id/guideline_sign_in_vertical3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_sign_in_horizontal_settings"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22"
        />



</androidx.constraintlayout.widget.ConstraintLayout>